# lish

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
cmd/hexkey/: main.go
cmd/lish/: main.go
docs/: builtins.md
env/: environ.go
example/: lishrc.lisp
exec/: exec.go
history/: history.go
lish/: Cargo.toml
lish/src/: main.rs
lisp/: Cargo.toml
lisp/src/: main.rs
lisp/src/ast/: list.rs  mod.rs
lisp/src/parser/: lexer.rs  parser.rs  token.rs
lisp_vm/: Cargo.toml
lisp_vm/src/: lib.rs
lisp_vm/src/compiler/: mod.rs  parser.rs
lisp_vm/src/object/: cons_list.rs  mod.rs
lisp_vm/src/vm/: env.rs  mod.rs
shell/: builtins.go  parse.go  parse_test.go  shell.go  utils.go
src/: main.rs
src/terminal/: mod.rs
terminal/: codes.go  terminal.go
