[package]
name = "lish"
version = "0.1.0"
authors = ["Lee Keitel <lee@keitel.xyz>"]
edition = "2018"

[dependencies]
clap = "2.*"
dirs = "2.0"
duct = "0.12.0"
lazuli_vm = { git = "https://github.com/lfkeitel/lazuli-lisp" }
# lazuli_vm = { path = "../070-lazuli/lazuli_vm" }
path-absolutize = "1.1.3"
shellexpand = "1.0.0"
termion = "1.5"
globwalk = "0.7.*"
