[package]
name = "lish"
version = "0.1.0"
authors = ["Lee Keitel <lee@keitel.xyz>"]
edition = "2018"
description = "Lazuli Lisp Shell"

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
dirs = "5.0.1"
duct = "0.13.7"
lazuli_vm = { git = "https://github.com/lfkeitel/lazuli-lisp" }
# lazuli_vm = { path = "../070-lazuli/lazuli_vm" }
path-absolutize = "3.1.1"
shellexpand = "3.1.0"
termion = "2.0.3"
globwalk = "0.9.0"
